@@ -1,3 +1,6 @@
+18 May 2012: Wouter
+	- improved printout of SSL_ERROR_SYSCALL errors.
+
 2 April 2012: Wouter
 	- Remove debug print from update code.
 	- Add debug prints to update code.
